Fix Navegación a reservar y overflow en recomendaciones

--- a/dream-lab-frontend/src/pages/HomePage/components/RecommendationsCarousel/RecommendationsCarousel.css
+++ b/dream-lab-frontend/src/pages/HomePage/components/RecommendationsCarousel/RecommendationsCarousel.css
@@ -47,6 +47,7 @@
 
 .textContainer {
     width: 45%;
+    overflow-y: auto;
 }
 
 .textContainer p {
